Fix selecting latest eCAL version (#77)

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,7 +1,7 @@
 # The official rust images are based on Debian, but we need Ubuntu for eCAL
 FROM ubuntu:22.04
 
-# ECAL_VER=auto  -> resolve the newest tag via the GitHub API
+# ECAL_VER=auto  -> resolve the newest release via the GitHub API
 # ECAL_VER=<tag> -> use that tag (e.g. v6.0.0-rc.5) as-is
 ARG ECAL_VER=auto
 ENV ECAL_VER=${ECAL_VER}
@@ -18,7 +18,9 @@ RUN set -eux; \
     # Replace the placeholder with the actual eCAL version
     if [ "$ECAL_VER" = "auto" ]; then \
         ECAL_VER=$(curl -sSL https://api.github.com/repos/eclipse-ecal/ecal/releases \
-                  | jq -r '[.[] | .tag_name][0]'); \
+            | jq -r '.[] | select((.draft|not) and (.prerelease|not)) | .tag_name' \
+            | sort -V \
+            | tail -n1); \
     fi; \
     # Locate the .deb that matches the tag and Ubuntu 22.04
     DEB_URL=$(curl -sSL https://api.github.com/repos/eclipse-ecal/ecal/releases/tags/${ECAL_VER} \
