--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,5 @@
 [workspace]
+resolver = "3"
 members = [
     "rustecal",
     "rustecal-core",
@@ -23,5 +24,5 @@ members = [
     "rustecal-samples/pubsub/serde_receive",
     "rustecal-samples/service/mirror_client",
     "rustecal-samples/service/mirror_client_instances",
-    "rustecal-samples/service/mirror_server"
-    ]
+    "rustecal-samples/service/mirror_server",
+]
