--- a/rustecal-types-protobuf/Cargo.toml
+++ b/rustecal-types-protobuf/Cargo.toml
@@ -12,6 +12,7 @@ keywords      = ["ecal", "ipc", "pubsub", "message-support", "middleware"]
 categories    = ["network-programming", "api-bindings"]
 
 [dependencies]
-prost           = "0.14"
+prost = "0.14"
+prost-reflect = { version = "0.16.0", features = ["derive"] }
 rustecal-core   = { version = "0.1", path = "../rustecal-core" }
 rustecal-pubsub = { version = "0.1", path = "../rustecal-pubsub" }
